@@ -6,12 +6,18 @@ HYPERMAIL VERSION 3.0.0
 ============================
 
 2023-00-00 Jose Kahan
+	* src/parse.c
+	Some old mail clients were could associate a message/rfc822
+	Content-Type with a BASE64 Content-Transfer-Encoding, which
+	violates RFC2046. If we find this case, we now force
+	ENCODE_NORMAL (the one used for both 7bit and 8bit).
+
 	* src/{setup.c, setup.h}
 	new conf. option warn_deprecated_options to control whether we
 	want hypermail to display warnings when a configuration file
 	has options that have been deprecated or that we plan to deprecate
 	in the next release.
-	
+
 	* src/{defaults.h.in, setup.c, hypermail.c}
 	set a default breadcrumb for messages if neither
 	mhtmlnavbar2upfile ihtmlnavbar2upfile config options are set
